# ticket-manager

./: .coveragerc  .env.local  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
scripts/: run-coverage.sh  run-linting-flake.sh  run-linting-ruff.sh  run-pytest.sh  start-development.sh
ticket_manager/: local_settings.py.template  settings.py  urls.py  urls_docs.py
ticket_manager/tickets/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
ticket_manager/tickets/migrations/: 0001_initial.py
ticket_manager/tickets/tests/: test_tickets.feature  test_tickets_endpoints.py  test_tickets_gherkin.py  test_tickets_model.py
